--- a/articles/2.md
+++ b/articles/2.md
@@ -1,5 +1,13 @@
 <p align="center"><img width="100" src="../assets/golf.png"></p>
 
+
+
+<div>
+
+    <div style="float:left">« <a href="/1.md">General</a></div>
+    <div style="float:right"><a href="/3.md">IO, Kernel and ARGV</a> »</div>
+</div>
+
 # Methods, blocks and lambdas
 
 *The different ways in which executable code can be stored and called, and which way is best for code-golf.*
