--- a/articles/2.md
+++ b/articles/2.md
@@ -2,10 +2,7 @@
 
 
 
-<div>
-<div style="float:left">« <a href="/1.md">General</a></div>
-<div style="float:right"><a href="/3.md">IO, Kernel and ARGV</a> »</div>
-</div>
+|[« General](/1.md)|[IO, Kernel and ARGV »](/3.md)|
 
 # Methods, blocks and lambdas
 
