--- a/articles/2.md
+++ b/articles/2.md
@@ -1,8 +1,8 @@
 <p align="center"><img width="100" src="../assets/golf.png"></p>
 
-
-
-|[« General](/1.md)|[IO, Kernel and ARGV »](/3.md)|
+| Previous           |                           Next |
+| ------------------ | -----------------------------: |
+| [« General](/1.md) | [IO, Kernel and ARGV »](/3.md) |
 
 # Methods, blocks and lambdas
 
