--- a/articles/2.md
+++ b/articles/2.md
@@ -1,8 +1,12 @@
 <p align="center"><img width="100" src="../assets/golf.png"></p>
 
+<div align="center">
+
 | Previous           |                           Next |
 | ------------------ | -----------------------------: |
 | [« General](/1.md) | [IO, Kernel and ARGV »](/3.md) |
+
+</div>
 
 # Methods, blocks and lambdas
 
