Move nav to footer

--- a/articles/2.md
+++ b/articles/2.md
@@ -1,9 +1,5 @@
 <p align="center"><img width="100" src="../assets/golf.png"></p>
 
-| Previous           |                           Next |
-| ------------------ | -----------------------------: |
-| [« General](/1.md) | [IO, Kernel and ARGV »](/3.md) |
-
 # Methods, blocks and lambdas
 
 *The different ways in which executable code can be stored and called, and which way is best for code-golf.*
@@ -12,3 +8,10 @@
 
 ## TODO
 
+TODO
+
+---
+
+|       Previous article       |               Next article               |
+| :--------------------------: | :--------------------------------------: |
+| [« General](./articles/1.md) | [IO, Kernel and ARGV »](./articles/3.md) |
