--- a/articles/2.md
+++ b/articles/2.md
@@ -12,6 +12,6 @@ TODO
 
 ---
 
-|       Previous article       |               Next article               |
-| :--------------------------: | :--------------------------------------: |
-| [« General](./articles/1.md) | [IO, Kernel and ARGV »](./articles/3.md) |
+|       Previous article        |               Next article               |
+| :---------------------------: | :--------------------------------------: |
+| [« General](../articles/1.md) | [IO, Kernel and ARGV »](../articles/3.md) |
