Add navigation links to all articles

--- a/articles/1.md
+++ b/articles/1.md
@@ -8,3 +8,10 @@
 
 ## TODO
 
+TODO
+
+------
+
+|               Next article               |
+| :--------------------------------------: |
+| [Methods, blocks and lambdas »](../articles/2.md) |
