--- a/articles/3.md
+++ b/articles/3.md
@@ -8,3 +8,11 @@
 
 ## TODO
 
+TODO
+
+------
+
+|             Previous article             |               Next article               |
+| :--------------------------------------: | :--------------------------------------: |
+| [« Methods, blocks and lambdas](../articles/2.md) | [Strings and regular expressions »](../articles/4.md) |
+
