--- a/articles/4.md
+++ b/articles/4.md
@@ -8,3 +8,11 @@
 
 ## TODO
 
+TODO
+
+------
+
+|             Previous article             |               Next article               |
+| :--------------------------------------: | :--------------------------------------: |
+| [« IO, Kernel and ARGV](../articles/3.md) | [Math and number types »](../articles/5.md) |
+
