--- a/articles/5.md
+++ b/articles/5.md
@@ -7,3 +7,12 @@
 ------
 
 ## TODO
+
+TODO
+
+------
+
+|             Previous article             |               Next article               |
+| :--------------------------------------: | :--------------------------------------: |
+| [« Strings and regular expressions](../articles/4.md) | [Arrays, ranges and the splat operator »](../articles/6.md) |
+
