--- a/articles/6.md
+++ b/articles/6.md
@@ -7,3 +7,12 @@
 ------
 
 ## TODO
+
+TODO
+
+------
+
+|             Previous article             |
+| :--------------------------------------: |
+| [« Math and number types](../articles/5.md) |
+
