--- a/articles/2.md
+++ b/articles/2.md
@@ -12,7 +12,7 @@ TODO
 
 ---
 
-|       Previous article        |               Next article               |
-| :---------------------------: | :--------------------------------------: |
-| [« General](../articles/1.md) | [IO, Kernel and ARGV »](../articles/3.md) |
+|      Previous article       |              Next article               |
+| :-------------------------: | :-------------------------------------: |
+| [General](../articles/1.md) | [IO, Kernel and ARGV](../articles/3.md) |
 
