--- a/articles/4.md
+++ b/articles/4.md
@@ -1,6 +1,6 @@
 <p align="center"><img width="100" src="../assets/golf.png"></p>
 
-# Strings and regular expressions
+# Strings, symbols and regular expressions
 
 *Quick tips such as interpolation to cut down on bytes wherever strings are involved, and understanding search patterns and the Regexp class.*
 
@@ -12,7 +12,7 @@ TODO
 
 ------
 
-|             Previous article             |               Next article               |
-| :--------------------------------------: | :--------------------------------------: |
-| [« IO, Kernel and ARGV](../articles/3.md) | [Math and number types »](../articles/5.md) |
+|            Previous article             |               Next article               |
+| :-------------------------------------: | :--------------------------------------: |
+| [IO, Kernel and ARGV](../articles/3.md) | [Math and number types](../articles/5.md) |
 
