--- a/articles/5.md
+++ b/articles/5.md
@@ -14,5 +14,5 @@ TODO
 
 |             Previous article             |               Next article               |
 | :--------------------------------------: | :--------------------------------------: |
-| [« Strings and regular expressions](../articles/4.md) | [Arrays, ranges and the splat operator »](../articles/6.md) |
+| [Strings, symbols and regular expressions](../articles/4.md) | [Arrays, ranges and the splat operator](../articles/6.md) |
 
