--- a/articles/6.md
+++ b/articles/6.md
@@ -14,5 +14,5 @@ TODO
 
 |             Previous article             |
 | :--------------------------------------: |
-| [« Math and number types](../articles/5.md) |
+| [Math and number types](../articles/5.md) |
 
