--- a/articles/3.md
+++ b/articles/3.md
@@ -14,5 +14,5 @@ TODO
 
 |             Previous article             |               Next article               |
 | :--------------------------------------: | :--------------------------------------: |
-| [« Methods, blocks and lambdas](../articles/2.md) | [Strings and regular expressions »](../articles/4.md) |
+| [Methods, blocks and lambdas](../articles/2.md) | [Strings, symbols and regular expressions](../articles/4.md) |
 
