Add ASCII pipe escape codes for table

--- a/articles/1.md
+++ b/articles/1.md
@@ -268,14 +268,14 @@ All operators in the Ruby language have their own precedence levels. These are i
 | Yes     | `+`, `-`                                 | Addition and subtraction                 |
 | Yes     | `>>`, `<<`                               | Right and left bitwise shift             |
 | Yes     | `&`                                      | Bitwise `AND`                            |
-| Yes     | `^`, `|`                                 | Bitwise exclusive `OR` and regular `OR`  |
+| Yes     | `^`, `&#124;`                            | Bitwise exclusive `OR` and regular `OR`  |
 | Yes     | `<=`, `<`, `>`, `>=`                     | Comparison operators                     |
 | Yes     | `<=>`, `==`, `===`, `!=`, `=~`, `!~`     | Equality and pattern match operators (`!=` and `!~` may not be defined as methods) |
 | No      | `&&`                                     | Logical `AND`                            |
-| No      | `||`                                     | Logical `AND`                            |
+| No      | `&#124;&#124;`                           | Logical `AND`                            |
 | No      | `..`, `...`                              | Range (inclusive and exclusive)          |
 | No      | `? :`                                    | Ternary operator (if-then-else)          |
-| No      | `=`, `%=`, `{`, `/=`, `-=`, `+=`, `|=`, `&=`, `>>=`, `<<=`, `*=`, `&&=`, `||=`, `**=` | Assignment                               |
+| No      | `=`, `%=`, `{`, `/=`, `-=`, `+=`, `&#124;=`, `&=`, `>>=`, `<<=`, `*=`, `&&=`, `&#124;&#124;=`, `**=` | Assignment                               |
 | No      | `defined?`                               | Check if specified symbol defined        |
 | No      | `not`                                    | Logical negation                         |
 | No      | `or`, `and`                              | Logical composition                      |
