--- a/articles/1.md
+++ b/articles/1.md
@@ -268,7 +268,7 @@ All operators in the Ruby language have their own precedence levels. These are i
 | Yes     | `+`, `-`                                 | Addition and subtraction                 |
 | Yes     | `>>`, `<<`                               | Right and left bitwise shift             |
 | Yes     | `&`                                      | Bitwise `AND`                            |
-| Yes     | `^`, `\|;`                               | Bitwise exclusive `OR` and regular `OR`  |
+| Yes     | `^`, `\|`                                | Bitwise exclusive `OR` and regular `OR`  |
 | Yes     | `<=`, `<`, `>`, `>=`                     | Comparison operators                     |
 | Yes     | `<=>`, `==`, `===`, `!=`, `=~`, `!~`     | Equality and pattern match operators (`!=` and `!~` may not be defined as methods) |
 | No      | `&&`                                     | Logical `AND`                            |
