Add method calls to whitespace + add postfix control flow to description

--- a/articles/1.md
+++ b/articles/1.md
@@ -28,7 +28,9 @@ puts 'Hello!' if C > 4
 puts'Hello!'if C>4
 ```
 
-However, this doesn't work with variables, constants and methods followed or preceded by reserved Ruby words like `if`. What if we try to remove the space between `if` and `C`, or what if we replace `C` with an integer?
+However, this doesn't work with variables, constants and methods followed or preceded by reserved Ruby words like `if`, or other method calls. For example, we can do `puts C` but not `putsC`.
+
+What if we try to remove the space between `if` and `C`, or what if we replace `C` with an integer?
 
 ```ruby
 puts'Hello!'ifC>4
@@ -38,7 +40,7 @@ puts'Hello!'if5>4
 #=> syntax error, unexpected tIDENTIFIER, expecting end-of-input puts'Hello!'if5>4
 ```
 
-However, it works with strings, symbols and arrays (and most of the other literals excluding the numbers, although this also changes depending on precedence):
+However, it works with strings, symbols and arrays (and most of the other literals excluding the numbers, although this also varies):
 
 ```ruby
 puts'Hello!'if[].length<4
@@ -135,7 +137,7 @@ Always use ASCII letters for your variable names!
 
 ## Better control flow and method returns <a name="4"></a>
 
-Ruby has a number of useful features for optimising your control flow and method returns - namely the ternary operator and automatic returning of the last evaluated expression.
+Ruby has a number of useful features for optimising your control flow and method returns - namely the ternary operator, postfix control flow and automatic returning of the last evaluated expression
 
 Consider the following four methods. They all produce the same output by printing `y` if the parameter is even or greater than 5, or `n` otherwise:
 
