Fix spacing in anchor tags

--- a/articles/1.md
+++ b/articles/1.md
@@ -6,15 +6,15 @@
 
 ---
 
-- [Eliminate whitespace](#Eliminate whitespace)
-- [Eliminate parentheses](#Eliminate parentheses)
-- [Shorten variable names](#Shorten variable names)
-- [Better control flow and method returns](#Better control flow and method returns)
-- [Operator precedence](#Operator precedence)
+- [Eliminate whitespace](#eliminate_whitespace)
+- [Eliminate parentheses](#eliminate_parentheses)
+- [Shorten variable names](#shorten_variable_names)
+- [Better control flow and method returns](#better_control_flow_and_method_returns)
+- [Operator precedence](#operator_precedence)
 
 ---
 
-## Eliminate whitespace <a name="Eliminate whitespace"></a>
+## Eliminate whitespace <a name="eliminate_whitespace"></a>
 
 Remember that whitespace is just another ASCII character, and therefore takes up a byte. In most cases, Ruby allows you to eliminate whitespace without any negative consequences:
 
@@ -53,7 +53,7 @@ puts'Hello!'if'string'.bytesize>4
 #=> Hello!
 ```
 
-## Eliminate parentheses <a name="Eliminate parentheses"></a>
+## Eliminate parentheses <a name="eliminate_parentheses"></a>
 
 Just like whitespace, sometimes parentheses aren't needed in Ruby code.
 
@@ -101,7 +101,7 @@ Note the space after `Math.sqrt`. If it were not present, we would be doing `(Ma
 
 But we also cannot remove the parentheses grouping `x2-x1` or `y2-y1`, as it changes the order of mathematical operations.
 
-## Shorten variable names <a name="Shorten variable names"></a>
+## Shorten variable names <a name="shorten_variable names"></a>
 
 Quite a simple one, but you'll always want to use single letter variable names. This example is quite a useless program, but it shows how many bytes it saves to use short variable names:
 
@@ -135,7 +135,7 @@ puts a.bytesize
 
 Always use ASCII letters for your variable names!
 
-## Better control flow and method returns <a name="Better control flow and method returns"></a>
+## Better control flow and method returns <a name="better control_flow_and_method_returns"></a>
 
 Ruby has a number of useful features for optimising your control flow and method returns - namely the ternary operator, postfix control flow and automatic returning of the last evaluated expression
 
@@ -257,7 +257,7 @@ puts age>=18?'Adult':age<13?'Child':'Teenager'
 
 Word of warning though, a lot of syntax highlighters will break when you mess around with parentheses, precedence and whitespace, especially if you use `Symbol` and `String` literals often, thanks to `:`, `''` and `""` causing a bit of confusion with the regular expressions used by the parsers when used without any surrounding whitespace. As long as the code does what you want, you can ignore the inconsistencies in syntax highlighting.
 
-## Operator precedence <a name="Operator precedence"></a>
+## Operator precedence <a name="operator_precedence"></a>
 
 All operators in the Ruby language have their own precedence levels. These are important to consider, especially in code-golf, since parentheses are typically used to alter precedence levels, but we also want to keep the amount of parentheses to a minimum in code-golf. This table shows the precedence of all operators in order of highest to lowest:
 
