--- a/articles/2.md
+++ b/articles/2.md
@@ -6,12 +6,12 @@
 
 ------
 
-- [Methods](#Methods)
-- [Blocks, lambdas (and procs?)](#Blocks, lambdas (and procs?))
+- [Methods](#methods)
+- [Blocks, lambdas (and procs?)](#blocks,_lambdas_(and_procs?))
 
 ---
 
-## Methods <a name="Methods"></a>
+## Methods <a name="methods"></a>
 
 In the previous article, methods were the type of procedure used to execute code. In all object-oriented programming languages, methods are undeniably the most popular way of executing code. However, Ruby offers another alternative to methods, that is **blocks**.
 
@@ -19,7 +19,7 @@ Despite *block* sounding like a very general term, they are a significantly diff
 
 In code-golf, **your solution should never be in the form of a method**. Lambdas save quite a number of bytes over methods, as you will see below.
 
-## Blocks, lambdas (and procs?) <a name="Blocks, lambdas (and procs?)"></a>
+## Blocks, lambdas (and procs?) <a name="blocks,_lambdas_(and_procs?)"></a>
 
 Blocks are denoted by a section of code enclosed within `{ ... }` or `do ... end`, where `…` represents the code. In code-golf, you'll almost always want to use `{ ... }` because it saves bytes. However, note that `{ .. }` does have higher precedence than `do ... end`.
 
