Fix better control flow

--- a/articles/1.md
+++ b/articles/1.md
@@ -135,7 +135,7 @@ puts a.bytesize
 
 Always use ASCII letters for your variable names!
 
-## Better control flow and method returns <a name="better control_flow_and_method_returns"></a>
+## Better control flow and method returns <a name="better_control_flow_and_method_returns"></a>
 
 Ruby has a number of useful features for optimising your control flow and method returns - namely the ternary operator, postfix control flow and automatic returning of the last evaluated expression
 
