Fix shorten variable names

--- a/articles/1.md
+++ b/articles/1.md
@@ -101,7 +101,7 @@ Note the space after `Math.sqrt`. If it were not present, we would be doing `(Ma
 
 But we also cannot remove the parentheses grouping `x2-x1` or `y2-y1`, as it changes the order of mathematical operations.
 
-## Shorten variable names <a name="shorten_variable names"></a>
+## Shorten variable names <a name="shorten_variable_names"></a>
 
 Quite a simple one, but you'll always want to use single letter variable names. This example is quite a useless program, but it shows how many bytes it saves to use short variable names:
 
