Add to_proc section

--- a/articles/2.md
+++ b/articles/2.md
@@ -8,6 +8,7 @@
 
 - [Methods](#methods)
 - [Blocks, lambdas (and procs?)](#blocks,_lambdas_(and_procs?))
+- [Shortening maps by using & and to_proc](#shortening_maps_by_using_&_and_to_proc)
 
 ---
 
@@ -102,6 +103,123 @@ b'@'
 ```
 
 However, do note that actually calling the lambda does add two more bytes thanks to having to call with `[]`.
+
+## Shortening maps by using & and to_proc <a name="shortening_maps_by_using_&_and_to_proc"></a>
+
+The typical *Ruby* way of iterating through arrays is to use the `each` method:
+
+```ruby
+[1,2,3,4].each{|x| print x}
+# 1234
+```
+
+It is important to note that this does not return any object.
+
+However, an alternative is the `map` method, which is one byte shorter. Although this also depends on the situation, because `map` does return an object:
+
+```ruby
+[1,2,3,4].map{|x| print x}
+# 1234
+#=> [nil,nil,nil,nil]
+```
+
+In this case, an array of four `nil` objects, since the block doesn't actually call any methods on the actual object. However, if we call methods on the object, it does return a new array:
+
+```ruby
+['this','is','code','golf'].map{|x| x.reverse}
+#=> ['siht','si','edoc','flog']
+```
+
+Consider the following examples:
+
+```ruby
+[[2],[2,8],[5,7,4],[]].map{|x| x.length}
+#=> [1, 2, 3, 0]
+
+['this','is','code','golf'].map{|x| x.reverse}
+#=> ['siht','si','edoc','flog']
+
+[1,2,3,4,5].map{|x| x**3}
+#=> [1, 8, 27, 64, 125]
+
+['hello',' ','world!'].each{|x| print x}
+# hello world!
+
+[1,4,9,16].map{|x| Math.sqrt(x)}
+#=> [1.0, 2.0, 3.0, 4.0]
+
+['1.txt','2.txt','3.txt'].map{|f| File.read(f)}
+#=> ['...', '...', '...']
+```
+
+All of these examples either iterate through the array and call a method on each individual element, e.g. `x.length`, `x.reverse`, or call a method with the element as a parameter e.g. `print x`, `Math.sqrt(x)` and `File.read(f)`. They can all be shortened by using the `&` operator. If you are calling a method on the elements of the array, it's straightforward:
+
+```ruby
+# 39 bytes
+[[2],[2,8],[5,7,4],[]].map{|x|x.length}
+# 36 bytes
+[[2],[2,8],[5,7,4],[]].map(&:length)
+# 35 bytes - you can remove parentheses but need the space!
+[[2],[2,8],[5,7,4],[]].map &:length
+```
+
+```ruby
+# 45 bytes
+['this','is','code','golf'].map{|x|x.reverse}
+# 41 bytes
+['this','is','code','golf'].map &:reverse
+```
+
+All that `&` is doing in this case is calling the `to_proc` method on the given symbol, allowing it to be passed as a stored block into the `map` method, which is expecting a block.
+
+The examples below use the same idea, but a bit differently since we're calling methods with the element as a parameter.
+
+As you can see though, in a lot of these kinds of cases, it's almost always better to just stick with the literal `{}` block format, due to `.method` costing quite a few bytes, and having to use parentheses:
+
+```ruby
+# 39 bytes
+['hello',' ','world!'].each{|x|print x}
+# 50 bytes - you need the parentheses this time!
+['hello',' ','world!'].each &Kernel.method(:print)
+```
+
+```ruby
+# 30 bytes
+[1,4,9,16].map{|x|Math.sqrt x}
+# 34 bytes
+[1,4,9,16].map &Math.method(:sqrt)
+```
+
+```ruby
+# 45 bytes
+['1.txt','2.txt','3.txt'].map{|f|File.read f}
+# 49 bytes
+['1.txt','2.txt','3.txt'].map &File.method(:read)
+```
+
+```ruby
+# 25 bytes
+[1,2,3,4,5].map{|x| x**3}
+# 30 bytes
+[1,2,3,4,5].map &3.method(:**)
+```
+
+As seen with the last example, you should almost always never use `&` and `to_proc` if you are just using Ruby operators like `<<`, `+`, `-`, `**`, etc.
+
+The only situation where this may be useful is when you'll have to use the same method repeatedly. Just for sake of demonstration, let's pretend you can't do use fractional powers to find roots, and we want to get the 64th root. Here we can use the fact that a variable can be assigned with a `Method` type:
+
+```ruby
+# 85 bytes
+[1,2**64,3**64].map{|x|Math.sqrt Math.sqrt Math.sqrt Math.sqrt Math.sqrt Math.sqrt x}
+#=> [1.0, 2.0, 3.0]
+
+# 81 bytes
+s=Math.method:sqrt
+[1,2**64,3**64].map(&s).map(&s).map(&s).map(&s).map(&s).map &s
+#=> [1.0, 2.0, 3.0]
+```
+
+But as you can see, these situations are extremely rare, and in this case only 3 bytes were saved.
 
 ---
 
