Removed parentheses on Math.sqrt and File.read + clarify to_proc

--- a/articles/2.md
+++ b/articles/2.md
@@ -145,14 +145,16 @@ Consider the following examples:
 ['hello',' ','world!'].each{|x| print x}
 # hello world!
 
-[1,4,9,16].map{|x| Math.sqrt(x)}
+[1,4,9,16].map{|x| Math.sqrt x}
 #=> [1.0, 2.0, 3.0, 4.0]
 
-['1.txt','2.txt','3.txt'].map{|f| File.read(f)}
+['1.txt','2.txt','3.txt'].map{|f| File.read f}
 #=> ['...', '...', '...']
 ```
 
-All of these examples either iterate through the array and call a method on each individual element, e.g. `x.length`, `x.reverse`, or call a method with the element as a parameter e.g. `print x`, `Math.sqrt(x)` and `File.read(f)`. They can all be shortened by using the `&` operator. If you are calling a method on the elements of the array, it's straightforward:
+All of these examples either iterate through the array and call a method on each individual element, e.g. `x.length`, `x.reverse`, or call a method with the element as a parameter e.g. `print x`, `Math.sqrt x` and `File.read f`.
+
+Most of the time, the map can be shortened by using the `&` operator. If you are calling a method on the elements of the array, it's straightforward:
 
 ```ruby
 # 39 bytes
@@ -174,7 +176,7 @@ All that `&` is doing in this case is calling the `to_proc` method on the given 
 
 The examples below use the same idea, but a bit differently since we're calling methods with the element as a parameter.
 
-As you can see though, in a lot of these kinds of cases, it's almost always better to just stick with the literal `{}` block format, due to `.method` costing quite a few bytes, and having to use parentheses:
+As you can see though, in a lot of these kinds of cases, it's almost always better to just stick with the literal `{}` block format, due to `.method` costing quite a few bytes, having to use parentheses, and having to specify the class or object from which the method is in:
 
 ```ruby
 # 39 bytes
